Add new data sets

--- a/AutoKeras.ipynb
+++ b/AutoKeras.ipynb
@@ -88,6 +88,7 @@
         "from autokeras.image.image_supervised import ImageClassifier\n",
         "from autokeras.utils import pickle_from_file\n",
         "import keras\n",
+        "import torch\n",
         "import numpy as np\n",
         "from sklearn.model_selection import train_test_split\n",
         "from google.colab import files"
@@ -105,34 +106,6 @@
         "## Load data set\n",
         "In the following sections you can load the data set you are going to use to test Auto-Keras. The training data is contained in `x_train` and `y_train`, while the test data is in `x_test` and `y_test`."
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "A221MCQ5t52p",
-        "colab_type": "text"
-      },
-      "source": [
-        "### [Iris](https://archive.ics.uci.edu/ml/datasets/iris)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "KEFud8mwt9Ab",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from sklearn.datasets import load_iris\n",
-        "X, y = load_iris(return_X_y=True)\n",
-        "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.15)\n",
-        "x_train = x_train.reshape(x_train.shape + (1,))\n",
-        "x_test = x_test.reshape(x_test.shape + (1,))\n",
-        "data_set_name = \"iris\""
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -164,11 +137,131 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "aVvqAmbQUjNt",
+        "colab_type": "text"
+      },
+      "source": [
+        "### [Fashion-MNIST](https://research.zalando.com/welcome/mission/research-projects/fashion-mnist/)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pIlzNkL8Ul9q",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from keras.datasets import fashion_mnist\n",
+        "(x_train, y_train), (x_test, y_test) = fashion_mnist.load_data()\n",
+        "x_train = x_train.reshape(x_train.shape + (1,))\n",
+        "x_test = x_test.reshape(x_test.shape + (1,))\n",
+        "data_set_name = \"fashion_mnist\""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6SKWl8dEUnXm",
+        "colab_type": "text"
+      },
+      "source": [
+        "### [CIFAR-10](https://www.cs.toronto.edu/~kriz/cifar.html)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aYMLxSwIUmkL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from keras.datasets import cifar10\n",
+        "(x_train, y_train), (x_test, y_test) = cifar10.load_data()\n",
+        "x_train = x_train.reshape(x_train.shape + (1,))\n",
+        "x_test = x_test.reshape(x_test.shape + (1,))\n",
+        "data_set_name = \"cifar_10\""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CDRCmNq-V5FP",
+        "colab_type": "text"
+      },
+      "source": [
+        "### [MHSMA](https://github.com/soroushj/mhsma-dataset)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H4h30uioV5Sl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!git clone https://github.com/soroushj/mhsma-dataset"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "55G9MpSfWwD_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# 64x64-pixel version of x\n",
+        "x_train = np.load(\"mhsma-dataset/mhsma/x_64_train.npy\")\n",
+        "x_test = np.load(\"mhsma-dataset/mhsma/x_64_test.npy\")\n",
+        "x_train = x_train.reshape(x_train.shape + (1,))\n",
+        "x_test = x_test.reshape(x_test.shape + (1,))\n",
+        "\n",
+        "# Different y labels\n",
+        "y_acrosome_train = np.load(\"mhsma-dataset/mhsma/y_acrosome_train.npy\")\n",
+        "y_acrosome_test = np.load(\"mhsma-dataset/mhsma/y_acrosome_test.npy\")\n",
+        "y_head_train = np.load(\"mhsma-dataset/mhsma/y_head_train.npy\")\n",
+        "y_head_test = np.load(\"mhsma-dataset/mhsma/y_head_test.npy\")\n",
+        "y_vacuole_train = np.load(\"mhsma-dataset/mhsma/y_vacuole_train.npy\")\n",
+        "y_vacuole_test = np.load(\"mhsma-dataset/mhsma/y_vacuole_test.npy\")\n",
+        "\n",
+        "data_set_name = \"mhsma\""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "guG1yPNmXL51",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Adapt for other y\n",
+        "y_train = y_vacuole_train\n",
+        "y_test = y_vacuole_test"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "xSBvHYo8paA_",
         "colab_type": "text"
       },
       "source": [
-        "### [Breast Cancer](https://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+(Diagnostic))\n"
+        "### [Breast Cancer](https://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+(Diagnostic))\n",
+        "Beware: This data set does not consist of images."
       ]
     },
     {
@@ -317,10 +410,11 @@
         "from keras.optimizers import Adam\n",
         "from keras.losses import mean_squared_error\n",
         "\n",
+        "\n",
         "model = Sequential()\n",
         "model.add(Conv2D(32, kernel_size=(3, 3),\n",
         "                 activation='relu',\n",
-        "                 input_shape=x_train[0].shape))\n",
+        "                 input_shape=(28,28,1)))\n",
         "model.add(Conv2D(64, (3, 3), activation='relu'))\n",
         "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
         "model.add(Dropout(0.25))\n",
@@ -350,7 +444,7 @@
       },
       "source": [
         "## Visualize and Evaluate\n",
-        "The visualization is an ugly workaround, but it works."
+        "The visualization is a workaround, but it works."
       ]
     },
     {
@@ -375,8 +469,20 @@
         "colab": {}
       },
       "source": [
-        "torch_model = clf.cnn.best_model.produce_model() # For trained model\n",
-        "#torch_model = clf.graph.produce_model() # For portable models that got imported"
+        "torch_model = clf.cnn.best_model.produce_model() # For trained models"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ozPkQcMfA3Jj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "torch_model = clf.graph.produce_model() # For portable models that got imported"
       ],
       "execution_count": 0,
       "outputs": []
