--- a/AutoKeras.ipynb
+++ b/AutoKeras.ipynb
@@ -88,6 +88,8 @@
         "from autokeras.image.image_supervised import ImageClassifier\n",
         "from autokeras.utils import pickle_from_file\n",
         "import keras\n",
+        "from keras.models import Sequential\n",
+        "from keras.layers import Dense, Conv2D, Dropout, Flatten, MaxPooling2D\n",
         "import torch\n",
         "import numpy as np\n",
         "from sklearn.model_selection import train_test_split\n",
@@ -399,39 +401,49 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BkrxcQtHVuVr",
+        "id": "PgL_M_ZpaNfb",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# Comparison model for MNIST\n",
-        "from keras import Sequential\n",
-        "from keras.layers import *\n",
-        "from keras.optimizers import Adam\n",
-        "from keras.losses import mean_squared_error\n",
-        "\n",
-        "\n",
+        "# Normalizing data\n",
+        "x_train = x_train.astype('float32')\n",
+        "x_test = x_test.astype('float32')\n",
+        "x_train /= 255.\n",
+        "x_test /= 255."
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-GuzpBVLLXL3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "%%time\n",
+        "%tensorflow_version 1.x\n",
+        "# Creating a Sequential Model and adding the layers\n",
         "model = Sequential()\n",
-        "model.add(Conv2D(32, kernel_size=(3, 3),\n",
-        "                 activation='relu',\n",
-        "                 input_shape=(28,28,1)))\n",
-        "model.add(Conv2D(64, (3, 3), activation='relu'))\n",
+        "model.add(Conv2D(28, kernel_size=(3,3), input_shape=x_train[0].shape))\n",
         "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
-        "model.add(Dropout(0.25))\n",
         "model.add(Flatten())\n",
-        "model.add(Dense(128, activation='relu'))\n",
-        "model.add(Dropout(0.5))\n",
-        "model.add(Dense(10, activation='softmax'))\n",
-        "model.compile(optimizer=Adam(), loss=mean_squared_error)\n",
+        "model.add(Dense(128, activation=\"relu\"))\n",
+        "model.add(Dropout(0.2))\n",
+        "model.add(Dense(len(np.unique(y_test)), activation=\"softmax\"))\n",
         "\n",
-        "model_log = model.fit(x_train, y_train,\n",
-        "          batch_size=128,\n",
-        "          epochs=10,\n",
-        "          verbose=1)\n",
+        "# Train\n",
+        "model.compile(optimizer='adam', \n",
+        "              loss='sparse_categorical_crossentropy', \n",
+        "              metrics=['accuracy'])\n",
+        "model.fit(x=x_train, y=y_train, epochs=10, verbose=1)\n",
         "\n",
-        "score = model.evaluate(x_test, y_test, verbose=0)\n",
-        "print('Test loss:', score[0])\n",
-        "print('Test accuracy:', score[1])"
+        "# Evaluate\n",
+        "score = model.evaluate(x_test, y_test)\n",
+        "print(\"Training loss\", score[0])\n",
+        "print(\"Training accuracy\", score[1])"
       ],
       "execution_count": 0,
       "outputs": []
