--- a/AutoKeras.ipynb
+++ b/AutoKeras.ipynb
@@ -11,7 +11,8 @@
     "version": 3,
     "colab": {
       "name": "Test.ipynb",
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -395,7 +396,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Create models for comparison"
+        "## Create model for comparison"
       ]
     },
     {
@@ -438,12 +439,7 @@
         "model.compile(optimizer='adam', \n",
         "              loss='sparse_categorical_crossentropy', \n",
         "              metrics=['accuracy'])\n",
-        "model.fit(x=x_train, y=y_train, epochs=10, verbose=1)\n",
-        "\n",
-        "# Evaluate\n",
-        "score = model.evaluate(x_test, y_test)\n",
-        "print(\"Training loss\", score[0])\n",
-        "print(\"Training accuracy\", score[1])"
+        "history = model.fit(x=x_train, y=y_train, epochs=10, verbose=1)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -455,8 +451,17 @@
         "colab_type": "text"
       },
       "source": [
-        "## Visualize and Evaluate\n",
-        "The visualization is a workaround, but it works."
+        "## Visualize and Evaluate"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ae4tKWU1gbz2",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Auto-Keras model"
       ]
     },
     {
@@ -467,7 +472,7 @@
         "colab": {}
       },
       "source": [
-        "# Evaluate model\n",
+        "# Evaluate\n",
         "print(clf.evaluate(x_test, y_test))"
       ],
       "execution_count": 0,
@@ -521,7 +526,7 @@
         "colab": {}
       },
       "source": [
-        "# Save and download PyTorch model\n",
+        "# Save and download model\n",
         "torch.save(torch_model, data_set_name + \".pth\")\n",
         "files.download(data_set_name + \".pth\")"
       ],
@@ -533,6 +538,71 @@
       "metadata": {
         "id": "knAhUs0CP2rQ",
         "colab_type": "text"
+      },
+      "source": [
+        "Subsequently use [this website](https://lutzroeder.github.io/netron/) to visualize the model."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "u_ud7NW4giXw",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Keras model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ti3CRT16fkPv",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Evaluate\n",
+        "score = model.evaluate(x_test, y_test)\n",
+        "print(\"Training loss\", score[0])\n",
+        "print(\"Training accuracy\", score[1])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cluP9xusgVuM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Print model structure\n",
+        "model.summary()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qn_MiJv1g_WE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Save and download model\n",
+        "model.save(data_set_name + \".h5\")\n",
+        "files.download(data_set_name + \".h5\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "exz8NVdChk99"
       },
       "source": [
         "Subsequently use [this website](https://lutzroeder.github.io/netron/) to visualize the model."
